modules/network/main.tf
resource "aws_vpc" "main" {
 cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "public" {
 vpc_id = aws_vpc.main.id
 cidr_block = "10.0.1.0/24"
 map_public_ip_on_launch = true
}

resource "aws_subnet" "private" {
 vpc_id = aws_vpc.main.id
 cidr_block = "10.0.2.0/24"
}

resource "aws_internet_gateway" "gw" {
 vpc_id = aws_vpc.main.id
}

resource "aws_eip" "nat_eip" {
 domain = "vpc"
}

resource "aws_nat_gateway" "nat" {
 allocation_id = aws_eip.nat_eip.id
 subnet_id     = aws_subnet.public.id
}

resource "aws_route_table" "public_rt" {
 vpc_id = aws_vpc.main.id
}

resource "aws_route" "public_internet" {
 route_table_id = aws_route_table.public_rt.id
 destination_cidr_block = "0.0.0.0/0"
 gateway_id = aws_internet_gateway.gw.id
}

resource "aws_route_table" "private_rt" {
 vpc_id = aws_vpc.main.id
}

resource "aws_route" "private_nat" {
 route_table_id = aws_route_table.private_rt.id
 destination_cidr_block = "0.0.0.0/0"
 nat_gateway_id = aws_nat_gateway.nat.id
}

resource "aws_route_table_association" "public_assoc" {
 subnet_id      = aws_subnet.public.id
 route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "private_assoc" {
 subnet_id      = aws_subnet.private.id
 route_table_id = aws_route_table.private_rt.id
}
